found a few things on iOS that needed fixing

--- a/src/assets/scss/mobile/_aboutStyles.scss
+++ b/src/assets/scss/mobile/_aboutStyles.scss
@@ -1,13 +1,13 @@
 @media (max-width: 768px) {
   .about {
     &-title {
-      font-size: 2.5rem;
+      font-size: 2.5rem !important;
     }
     &-subtitle {
       font-size: 0.95rem;
     }
     &-text {
-      width: 100%;
+      width: 100% !important;
     }
     &-content {
       padding-bottom: 1rem !important;
