--- a/src/assets/scss/mobile/_educationStyles.scss
+++ b/src/assets/scss/mobile/_educationStyles.scss
@@ -1,6 +1,6 @@
 @media (max-width: 768px) {
   .card {
-    width: 100%;
+    width: 100% !important;
     padding-top: 3rem !important;
     margin-bottom: 4rem !important;
   }
